--- a/index.html
+++ b/index.html
@@ -4,9 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <header class="global-nav">
+        <div class="container">
+            <h1>Portfolio</h1>
+            <nav>
+                <ul>
+                    <li><a href="#Profile">Profile</a></li>
+                    <li><a href="#one">1</a></li>
+                    <li><a href="#two">2</a></li>
+                    <li><a href="#three">3</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+
+  <section id="hero">
+    <h2>北島達樹の<br>ポートフォリオ</h2>
+    
+  </section>
+
+  <section id="Profile">
+    <h2>Profile</h2>
+    <img src="./画像/profile.jpg" alt="">
+  </section>
+
+
+  <section id="one">
+    <h2>会社のホームページ制作</h2>
+    <div class="company">
+        <nav>
+            <ul>
+                <li><img src="./画像/company1.jpg" alt=""></li>
+                <li><img src="./画像/company2.jpg" alt=""></li>
+                <li><p>会社のホームページを制作することが出来ます。<br>・制作時間：3時間</p></li>
+            </ul>
+        </nav>
+    </div>
+  </section>
+
+
+  <section id="two">
+    <h2>問い合わせフォーム制作</h2>
+    <div class="contact">
+        <img src="./画像/contact.jpg" alt="">
+        <p>・お客さまの要望や意見などを聞けるフォームを作ることが出来ます。<br>・制作時間：1時間30分</p>
+    </div>
+  </section>
+
+
+  <section id="three">
+    <h2>カウントダウンタイマー</h2>
+    <div>
+        <img src="./画像/countdowntimer.jpg" alt="">
+        <p>・会社のイベントや誰かの誕生日などに利用できます。<br>・制作時間：1時間</p>
+    </div>
+  </section>
 </body>
 </html>
