update: Glt -> GitHub

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <ul>
                 <li><img src="./画像/company1.jpg" alt=""></li>
                 <li><img src="./画像/company2.jpg" alt=""></li>
-                <li><p>会社のホームページを制作することが出来ます。<br>・制作時間：3時間</p></li>
+                <li><p>会社のホームページを制作することが出来ます。<br>制作時間：3時間</p></li>
             </ul>
         </nav>
     </div>
@@ -52,7 +52,7 @@
     <h2>問い合わせフォーム制作</h2>
     <div class="contact">
         <img src="./画像/contact.jpg" alt="">
-        <p>・お客さまの要望や意見などを聞けるフォームを作ることが出来ます。<br>・制作時間：1時間30分</p>
+        <p>お客さまの要望や意見などを聞けるフォームを作ることが出来ます。<br>制作時間：1時間30分</p>
     </div>
   </section>
 
@@ -61,7 +61,7 @@
     <h2>カウントダウンタイマー</h2>
     <div>
         <img src="./画像/countdowntimer.jpg" alt="">
-        <p>・会社のイベントや誰かの誕生日などに利用できます。<br>・制作時間：1時間</p>
+        <p>会社のイベントや誰かの誕生日などに利用できます。<br>制作時間：1時間</p>
     </div>
   </section>
 </body>
