update: Glt -> GitHub

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <title>Portfolio</title>
 </head>
 <body>
@@ -29,8 +30,30 @@
   </section>
 
   <section id="Profile">
-    <h2>Profile</h2>
-    <img src="./画像/profile.jpg" alt="">
+    <main>
+        <div class="profile-photo">
+          <img src="./画像/80D01E24-7D84-4B82-9AE1-D8121FFD31E6.jpg">
+          <span class="circle1"></span>
+          <span class="circle2"></span>
+          <span class="circle3"></span>
+        </div>
+        <div class="profile-text">
+          <h1>北島 達樹</h1>
+          <p>
+            メディア情報専攻<br>
+            フリーサウンドサークル所属<br>
+            ドラム、キーボード、ボーカル担当<br>
+            情報技術検定１級(2020年)<br>
+            実用英語技能検定準２級(2018年)    
+          </p>
+          <ul class="social">
+            <li><a href="x21036xx@aitech.ac.jp"><i class="lar la-envelope"></i></a></li>
+            <li><a href="https://twitter.com/MeroKitasan"><i class="lab la-twitter"></i></a></li>
+            <li><a href="https://www.youtube.com/c/FSCAIT"><i class="lab la-youtube"></i></a></li>
+            <li><a href="https://www.instagram.com/kitasan_43_036"><i class="lab la-instagram"></i></a></li>
+          </ul>
+        </div>
+      </main>
   </section>
 
 
