--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <h2>問い合わせフォーム制作</h2>
     <div class="contact">
         <img src="./画像/contact.jpg" alt="">
-        <p>お客さまの要望や意見などを聞けるフォームを作ることが出来ます。<br>制作時間：1時間30分</p>
+        <p>※画像はイメージです。入力はできません。<br>お客さまの要望や意見などを聞けるフォームを作ることが出来ます。<br>制作時間：1時間30分</p>
     </div>
   </section>
 
